// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List renders empty 1`] = `
.c0 {
  margin: 0;
  border: 1px solid #d8d8d8;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

<div>
  <div
    className="c0"
  />
</div>
`;

exports[`List renders items custom 1`] = `
.c1 {
  padding: 0.694rem 1.440rem 0.694rem 1.440rem;
  border: 1px solid #d8d8d8;
  margin: 0;
  border-left: none;
  border-top: none;
  border-right: none;
}

.c1:last-child {
  border-bottom: none;
}

.c0 {
  margin: 0;
  border: 1px solid #d8d8d8;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Custom Red
    </div>
    <div
      className="c1"
    >
      Custom Green
    </div>
    <div
      className="c1"
    >
      Custom Blue
    </div>
  </div>
</div>
`;

exports[`List renders items default 1`] = `
.c1 {
  padding: 0.694rem 1.440rem 0.694rem 1.440rem;
  border: 1px solid #d8d8d8;
  margin: 0;
  border-left: none;
  border-top: none;
  border-right: none;
}

.c1:last-child {
  border-bottom: none;
}

.c0 {
  margin: 0;
  border: 1px solid #d8d8d8;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

<div>
  <div
    className="c0"
  >
    <div
      className="c1"
    >
      Red
    </div>
    <div
      className="c1"
    >
      Green
    </div>
    <div
      className="c1"
    >
      Blue
    </div>
  </div>
</div>
`;

exports[`List renders with custom margin 1`] = `
.c0 {
  margin: 1.440rem;
  border: 1px solid #d8d8d8;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border-top-left-radius: 0.40187757201646096rem;
  border-top-right-radius: 0.40187757201646096rem;
  border-bottom-left-radius: 0.40187757201646096rem;
  border-bottom-right-radius: 0.40187757201646096rem;
}

<div>
  <div
    className="c0"
  />
</div>
`;
